@@ -1,3 +1,6 @@
+HEAD
+	+ Use .crt when downloading the certificate for RPC/Proxy
+	  to ease Windows importing
 3.5.3
 	+ Notify when OpenChange is using the domain certificate
 	+ Migrate RPC Proxy certificate to new use our zentyal-ca
